src/css/common.css
div#root input[type="checkbox"].form-checkbox {
    border-radius: 3px;
}

div#root div.block-content :is(h1, h2, h3, h4, h5, h6),
.rounded {
    border-radius: 0.4em;
}

div#root div.block-content :is(h1, h2, h3, h4, h5, h6) {
    padding-left: 0.5em;
}

div#root div:is(.ui__modal-panel,
    .menu-links-outer,
    .menu-links-wrapper) {
    border: 2px solid var(--ls-border-color);
    box-shadow: 0 0 4px var(--ls-border-color);
}

body[data-page=home] div#main-content-container {
    z-index: 0;
}

#custom-context-menu,
div.dropdown-wrapper {
    z-index: var(--ls-z-index-level-5);
}

div#root input.form-checkbox:checked {
    background-color: var(--ls-selection-background-color);
}

.form-input:focus,
.form-multiselect:focus,
.form-select:focus,
.form-textarea:focus {
    border-color: var(--ls-active-secondary-color);
}

div.left-sidebar-inner div.nav-content-item div.header {
    margin-left: -0.8em;
    margin-top: 1em;
    background-color: var(--ls-tertiary-background-color);
}

div#left-sidebar div.favorites:not(:has(li.favorite-item)),
div#left-sidebar div.recent:not(:has(li.recent-item)) {
    display: none;
}

.dark-theme,
html[data-theme=dark] {
    --ls-page-properties-background-color: #3e393d57;
}

div[label="plugin-settings-modal"] div.ui__modal-panel {
    min-height: 60vh;
}

div[label="plugin-settings-modal"] div.ui__modal-panel div.cp__settings-inner aside {
    height: 100%;
    margin-bottom: 3em;
}

div[label="plugin-settings-modal"] div.ui__modal-panel div.cp__settings-inner aside ul li {
    padding: 11px;
}

